# unify

./: README.md  cabal.project  flake.nix  hie.yaml  not-ass.cabal  unify.cabal
.github/workflows/: CI.yaml
src/: OnionFind.hs  UnionFind.hs
src/Control/: Unify.hs
src/UnionFind/: Internal.hs
test/: Spec.hs
